# ebb

./: .editorconfig  .gitignore  .oxfmtrc.json  .prettierignore  .prettierrc  .prettierrc.json  AGENTS.md  CHANGELOG.md  PRODUCT.md  README.md  ROADMAP.md  components.json  design-system.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-web.yml  release.yml
.impeccable/critique/: 2026-06-24T08-29-18Z__src-components-flowgrid-tsx.md  2026-06-24T08-57-07Z__src-components-flowgrid-tsx.md
analysis/: ARCHITECTURE.mmd  ASSESSMENT.md
assets/brand/: README.md
docs/: DESIGN.md  PRODUCT.md  RELEASE.md  ebb.md  security-review.md
docs/desktop/: ci-and-deployment.md  manual-trust.md  releasing.md  responsiveness-checkpoint.md
docs/superpowers/plans/: 2026-06-01-aff-neg-sheets-rename.md  2026-06-01-debate-flow-foundation.md  2026-06-02-editor-engine-phase1.md  2026-06-02-export-system.md  2026-06-03-cx-grid-rework.md  2026-06-03-flow-ux-batch-design-plan.md  2026-06-03-flow-ux-batch.md  2026-06-03-settings-shadcn-twopane.md  2026-06-03-shadcn-visual-refresh.md  2026-06-04-cell-display-editing-overhaul.md  2026-06-04-cross-applications.md  2026-06-04-fuzzy-search-palette.md  2026-06-04-groups.md  (+4 more)
flatpak/: net.smodi.ebb.yml
plans/: 001-radix-motion-retune.md  002-instant-search-palette.md  003-update-chip-damping.md  004-dashboard-group-swap.md  005-scrim-token.md  006-reveal-flash.md  README.md
public/templates/: Flow.xlsx  Flow.xltm
scripts/: generate-icons.mjs  sync-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  menu.rs
src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
src/components/: AppRoot.test.tsx  AppRoot.tsx  CommandPalette.test.tsx  CommandPalette.tsx  CriticalUpdateModal.tsx  CxSheet.test.tsx  CxSheet.tsx  DesktopMenu.tsx  DesktopSelectAll.tsx  EmptyCellEditor.tsx  ExportMenu.test.tsx  ExportMenu.tsx  FlowCoach.tsx  FlowGrid.test.tsx  FlowGrid.tsx  GridCell.test.tsx  GridCell.tsx  InfoPanel.test.tsx  InfoPanel.tsx  KeybindingsCheatsheet.tsx  MotionRoot.test.tsx  MotionRoot.tsx  PrintView.test.tsx  PrintView.tsx  QuickSwitcher.tsx  RoundHeader.test.tsx  RoundHeader.tsx  RoundSetup.test.tsx  RoundSetup.tsx  SaveStatus.test.tsx  SaveStatus.tsx  SearchPalette.test.tsx  SearchPalette.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  Sidebar.test.tsx  Sidebar.tsx  ThemeSync.tsx  Timers.test.tsx  Timers.tsx  (+5 more)
src/lib/: platform.ts
test/components/: MotionRoot.test.tsx
(+365 files in other folders)
